tests/interpreter/pass/029-array-element.hyg
let arr: array {int} = array(2 + 2, 40 + 2);
let x: int = arrayElem(arr, 2);

assert(x = 42)