tests/interpreter/fail/029-array-assign-slice-out-of-upper-bound.hyg
let arr: array {int} = array(2, 1);
// Assign a sliced array
let sliced: array {int} = arraySlice(arr, 2, 3);
print("should not print!")